--- a/unity_project/DetectiveIsland/.vscode/settings.json
+++ b/unity_project/DetectiveIsland/.vscode/settings.json
@@ -51,5 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "DetectiveIsland.sln"
+    "dotnet.defaultSolution": "DetectiveIsland.sln",
+    "dotnet.preferCSharpExtension": true
 }
