--- a/unity_project/DetectiveIsland/Packages/manifest.json
+++ b/unity_project/DetectiveIsland/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
