--- a/unity_project/DetectiveIsland/Packages/manifest.json
+++ b/unity_project/DetectiveIsland/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
