--- a/unity_project/DetectiveIsland/Packages/manifest.json
+++ b/unity_project/DetectiveIsland/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
