--- a/unity_project/DetectiveIsland/Packages/manifest.json
+++ b/unity_project/DetectiveIsland/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.recorder": "4.0.2",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
